add enable preview setting to java scripts